loopfor.LoopFor.scala.error
Compilation error:
LoopFor:8: error: '<-' expected but ')' found.
for (i -> 1 to pas) backward()
                  ^LoopFor:11: error: illegal start of simple expression
	}
        ^